--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       padding: 20px;
       width: 90%;
       max-width: 600px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
 
     #mensaje span {
@@ -52,12 +56,10 @@
     }
 
     .botones {
-      position: fixed;
-      left: 50%;
-      transform: translateX(-50%);
-      bottom: 30%;
+      margin-top: 18px;
       display: flex;
-      gap: 30px;
+      gap: 24px;
+      justify-content: center;
       align-items: center;
       z-index: 20;
     }
@@ -90,18 +92,16 @@
       }
     }
 
-    #btnSi {
-      position: relative;
-      z-index: 20;
-    }
-
-    #btnNo {
+    /* Los botones usan el flujo normal dentro de #mensaje */
+    #btnSi, #btnNo {
+      width: 140px;
+      max-width: 40vw;
       position: relative;
       z-index: 20;
     }
 
     @media (max-width: 480px) {
-      .botones { bottom: 25%; gap: 16px; }
+      .botones { gap: 16px; }
       .botones button { width: 36vw; padding: 10px 16px; font-size: 14px; }
     }
 
@@ -118,10 +118,10 @@
   <div id="mensaje">
     Voçe me entendhe<br />
     <span></span>
-  </div>
-  <div class="botones">
-    <button id="btnSi" onclick="respuesta('Sí')">Sim</button>
-    <button id="btnNo" onclick="respuesta('Não')">Não</button>
+    <div class="botones">
+      <button id="btnSi" onclick="respuesta('Sí')">Sim</button>
+      <button id="btnNo" onclick="respuesta('Não')">Não</button>
+    </div>
   </div>
 
   <script>
