--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
     body {
       margin: 0;
       background-color: #f5e6d3;
-      color: #000000;
+      color: #2E4052;
       font-family: 'Courier New', Courier, monospace;
       overflow: hidden;
+    }
+    
+    html {
+      background-color: #f5e6d3;
     }
 
     canvas {
@@ -34,6 +38,7 @@
       left: 0;
       width: 100vw;
       height: 100vh;
+      background-color: #f5e6d3;
     }
 
     #mensaje {
@@ -196,8 +201,8 @@
       }
       lastFrameTime = timestamp;
 
-      // Dibujar con ligera opacidad para efecto persistente, pero más ligero para rendimiento
-      ctx.fillStyle = 'rgba(245, 230, 211, 0.12)';
+      // Dibujar con fondo arena y ligera opacidad para efecto persistente
+      ctx.fillStyle = 'rgba(245, 230, 211, 1)';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
 
       ctx.fillStyle = '#2E8BC0';
