--- a/index.html
+++ b/index.html
@@ -27,36 +27,31 @@
       z-index: 99999;
       display: flex;
       gap: 10px;
-      background-color: rgba(46, 64, 82, 0.9);
-      padding: 10px;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      pointer-events: auto;
+      background-color: #2E4052;
+      padding: 8px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     }
 
     .lang-btn {
-      padding: 10px 15px;
-      border: 2px solid #f5e6d3;
-      border-radius: 8px;
-      background-color: #2E4052;
+      padding: 8px 16px;
+      border: none;
+      border-radius: 4px;
+      background-color: transparent;
       color: #f5e6d3;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 14px;
       font-weight: bold;
-      transition: all 0.3s ease;
-      margin: 0 5px;
+      transition: all 0.2s ease;
     }
 
     .lang-btn:hover {
-      transform: scale(1.1);
-      background-color: #3E5062;
-      border-color: #ffffff;
+      background-color: rgba(245, 230, 211, 0.2);
     }
 
     .lang-btn.active {
       background-color: #f5e6d3;
       color: #2E4052;
-      box-shadow: 0 0 12px rgba(255,255,255,0.4);
     }
 
     body {
