--- a/index.html
+++ b/index.html
@@ -413,8 +413,14 @@
   <div class="social-overlay" id="social-overlay" aria-hidden="true">
     <div class="social-panel" role="dialog" aria-modal="true" aria-label="Nexo Social">
       <div class="social-header">
-        <strong>Nexo Social</strong>
-        <div>
+        <div style="display:flex;gap:12px;align-items:center;">
+          <strong>Nexo Social</strong>
+          <input id="search-posts" type="text" placeholder="Buscar en el feed..." style="padding:6px 8px;border-radius:8px;border:1px solid rgba(255,255,255,0.1);" oninput="renderFeed()" aria-label="Buscar publicaciones" />
+        </div>
+        <div style="display:flex;gap:8px;align-items:center;">
+          <input id="display-name" type="text" placeholder="Tu nombre" style="padding:6px 8px;border-radius:8px;border:1px solid rgba(255,255,255,0.1);width:140px;" aria-label="Nombre de usuario" />
+          <button onclick="saveDisplayName()" aria-label="Guardar nombre" style="background:transparent;border:1px solid rgba(255,255,255,0.12);color:#f5e6d3;padding:6px 8px;border-radius:8px;cursor:pointer">Guardar</button>
+          <button onclick="clearFeed()" aria-label="Limpiar feed" style="background:transparent;border:1px solid rgba(255,255,255,0.12);color:#f5e6d3;padding:6px 8px;border-radius:8px;cursor:pointer">Limpiar</button>
           <button onclick="closeSocial()" aria-label="Cerrar" style="background:transparent;border:none;color:#f5e6d3;cursor:pointer;font-weight:700">Cerrar ✕</button>
         </div>
       </div>
@@ -422,7 +428,9 @@
         <div class="compose" aria-label="Componer publicación">
           <textarea id="compose-text" placeholder="¿Qué quieres compartir?" aria-label="Texto de la publicación"></textarea>
           <div style="display:flex;flex-direction:column;gap:8px;min-width:140px;">
-            <input id="compose-image" type="text" placeholder="URL imagen (opcional)" aria-label="URL de imagen" />
+            <input id="compose-image-url" type="text" placeholder="URL imagen (opcional)" aria-label="URL de imagen" />
+            <input id="compose-image-file" type="file" accept="image/*" aria-label="Subir imagen" />
+            <input id="compose-image-data" type="hidden" />
             <button id="publish-btn" onclick="createPost()">Publicar</button>
           </div>
         </div>
@@ -630,16 +638,18 @@
 
     function createPost() {
       const textEl = document.getElementById('compose-text');
-      const imgEl = document.getElementById('compose-image');
+      const imgUrlEl = document.getElementById('compose-image-url');
+      const imgDataEl = document.getElementById('compose-image-data');
       const text = (textEl.value || '').trim();
-      const img = (imgEl.value || '').trim();
+      const img = (imgDataEl.value || imgUrlEl.value || '').trim();
       if (!text && !img) {
         alert('Añade texto o una imagen para publicar.');
         return;
       }
+      const user = localStorage.getItem('nexo_user') || document.getElementById('display-name').value || 'Tú';
       const post = {
         id: Date.now(),
-        user: 'Tú',
+        user: user,
         text,
         img: img || null,
         likes: 0,
@@ -652,7 +662,9 @@
       renderFeed();
       // clear composer
       textEl.value = '';
-      imgEl.value = '';
+      imgUrlEl.value = '';
+      imgDataEl.value = '';
+      document.getElementById('compose-image-file').value = '';
     }
 
     function renderFeed() {
@@ -707,6 +719,88 @@
         .replace(/"/g, '&quot;')
         .replace(/'/g, '&#39;');
     }
+
+    // --- Additional social utilities ---
+    // Read selected file and store as data URL in hidden input
+    document.addEventListener('DOMContentLoaded', () => {
+      const fileInput = document.getElementById('compose-image-file');
+      if (fileInput) {
+        fileInput.addEventListener('change', function() {
+          const f = this.files && this.files[0];
+          if (!f) return;
+          const reader = new FileReader();
+          reader.onload = function(ev) {
+            const data = ev.target.result;
+            const hidden = document.getElementById('compose-image-data');
+            if (hidden) hidden.value = data;
+          };
+          reader.readAsDataURL(f);
+        });
+      }
+
+      // Populate display name from localStorage
+      const nameInput = document.getElementById('display-name');
+      const stored = localStorage.getItem('nexo_user');
+      if (nameInput && stored) nameInput.value = stored;
+    });
+
+    function saveDisplayName() {
+      const nameInput = document.getElementById('display-name');
+      if (!nameInput) return;
+      const v = (nameInput.value || '').trim();
+      if (!v) return alert('Introduce un nombre válido');
+      localStorage.setItem('nexo_user', v);
+      // update posts' user label for new posts
+      alert('Nombre guardado: ' + v);
+    }
+
+    function clearFeed() {
+      if (!confirm('¿Eliminar todas las publicaciones? Esta acción no se puede deshacer.')) return;
+      posts = [];
+      savePosts();
+      renderFeed();
+    }
+
+    function deletePost(id) {
+      if (!confirm('Eliminar publicación?')) return;
+      posts = posts.filter(p => p.id !== id);
+      savePosts();
+      renderFeed();
+    }
+
+    function editPost(id) {
+      const idx = posts.findIndex(p => p.id === id);
+      if (idx === -1) return;
+      const p = posts[idx];
+      const newText = prompt('Editar publicación:', p.text);
+      if (newText == null) return; // cancel
+      posts[idx].text = newText;
+      savePosts();
+      renderFeed();
+    }
+
+    function toggleComments(id) {
+      const container = document.getElementById('comments-' + id);
+      if (!container) return;
+      if (container.style.display === 'block') {
+        container.style.display = 'none';
+        return;
+      }
+      container.style.display = 'block';
+    }
+
+    function addComment(id) {
+      const input = document.getElementById('comment-input-' + id);
+      if (!input) return;
+      const txt = (input.value || '').trim();
+      if (!txt) return;
+      const idx = posts.findIndex(p => p.id === id);
+      if (idx === -1) return;
+      posts[idx].comments.push({ user: localStorage.getItem('nexo_user') || 'Tú', text: txt, ts: new Date().toISOString() });
+      savePosts();
+      renderFeed();
+    }
+
   </script>
 </body>
 </html>
