--- a/index.html
+++ b/index.html
@@ -432,6 +432,9 @@
             <input id="compose-image-file" type="file" accept="image/*" aria-label="Subir imagen" />
             <input id="compose-image-data" type="hidden" />
             <input id="compose-image-thumb" type="hidden" />
+            <div id="image-info" style="font-size:12px;color:#444;margin-top:6px"></div>
+            <label style="font-size:12px;color:#333;margin-top:6px;display:flex;align-items:center;gap:8px"><input id="force-thumb" type="checkbox" checked /> Publicar solo miniatura si imagen grande</label>
+            <input id="compose-image-thumb" type="hidden" />
             <button id="publish-btn" onclick="createPost()">Publicar</button>
           </div>
         </div>
@@ -669,7 +672,7 @@
         comments: [],
         ts: new Date().toISOString()
       };
-      // If Firebase is active, upload images and save remotely; otherwise keep local
+  // If Firebase is active, upload images and save remotely; otherwise keep local
       if (firebaseActive) {
         // show a quick optimistic local post while uploading
         posts.unshift({ ...post, uploading: true });
@@ -678,10 +681,28 @@
           let fullUrl = null;
           let thumbUrl = post.img_thumb || null;
           if (post.img_full) {
-            fullUrl = await uploadImageToFirebase(post.img_full, 'full');
+            const fullSize = dataUrlSize(post.img_full);
+            if (fullSize > MAX_IMAGE_BYTES) {
+              const forceThumb = document.getElementById('force-thumb') && document.getElementById('force-thumb').checked;
+              if (!forceThumb) {
+                alert('La imagen comprimida es demasiado grande (' + humanBytes(fullSize) + '). Marca la casilla "Publicar solo miniatura si imagen grande" o sube una imagen más pequeña.');
+                // remove optimistic placeholder
+                posts = posts.filter(p => !p.uploading);
+                renderFeed();
+                return;
+              }
+              // force to not upload full, only thumb
+              post.img_full = null;
+            }
+            if (post.img_full) fullUrl = await uploadImageToFirebase(post.img_full, 'full');
           }
           if (post.img_thumb) {
-            // upload thumb as well (optional)
+            const thumbSize = dataUrlSize(post.img_thumb);
+            // thumbs are small; still check
+            if (thumbSize > MAX_IMAGE_BYTES) {
+              // very unlikely, but handle it
+              alert('La miniatura es demasiado grande. Intenta con una imagen más pequeña.');
+            }
             const maybeThumb = await uploadImageToFirebase(post.img_thumb, 'thumb');
             if (maybeThumb) thumbUrl = maybeThumb;
           }
@@ -817,6 +838,8 @@
               const hiddenThumb = document.getElementById('compose-image-thumb');
               if (hiddenFull) hiddenFull.value = full;
               if (hiddenThumb) hiddenThumb.value = thumb;
+              // Update info (sizes)
+              updateImageInfo(full, thumb);
             };
             img.src = dataUrl;
           };
@@ -885,6 +908,40 @@
       posts[idx].comments.push({ user: localStorage.getItem('nexo_user') || 'Tú', text: txt, ts: new Date().toISOString() });
       savePosts();
       renderFeed();
+    }
+
+    // Helper: estimate bytes of a dataURL
+    function dataUrlSize(dataUrl) {
+      if (!dataUrl) return 0;
+      const idx = dataUrl.indexOf(',');
+      if (idx === -1) return 0;
+      const base64 = dataUrl.substring(idx + 1);
+      // Approx bytes = base64_length * 3/4
+      return Math.ceil((base64.length * 3) / 4);
+    }
+
+    function humanBytes(bytes) {
+      if (!bytes) return '0 B';
+      const units = ['B','KB','MB','GB'];
+      let i = 0;
+      let v = bytes;
+      while (v >= 1024 && i < units.length-1) { v /= 1024; i++; }
+      return v.toFixed( (i===0)?0:1 ) + ' ' + units[i];
+    }
+
+    const MAX_IMAGE_BYTES = 900000; // ~900 KB threshold
+
+    function updateImageInfo(fullDataUrl, thumbDataUrl) {
+      const infoEl = document.getElementById('image-info');
+      if (!infoEl) return;
+      const fullSize = dataUrlSize(fullDataUrl);
+      const thumbSize = dataUrlSize(thumbDataUrl);
+      let html = `Miniatura: ${humanBytes(thumbSize)}`;
+      if (fullDataUrl) html += ` — Versión comprimida: ${humanBytes(fullSize)}`;
+      if (fullSize > MAX_IMAGE_BYTES) {
+        html += ` <strong style="color:#b00;margin-left:8px">La imagen excede ${humanBytes(MAX_IMAGE_BYTES)}.</strong>`;
+      }
+      infoEl.innerHTML = html;
     }
 
     // --- Optional Firebase integration (client-side) ---
@@ -1005,16 +1062,21 @@
         canvas.height = targetHeight;
         const c = canvas.getContext('2d');
         c.drawImage(img, 0, 0, targetWidth, targetHeight);
-        // Prefer WebP when available (better compression), then JPEG, then PNG
+        // Prefer AVIF -> WebP -> JPEG -> PNG when available
         try {
-          const test = canvas.toDataURL('image/webp', quality);
-          if (test && test.indexOf('data:image/webp') === 0) {
-            resolve(test);
+          const testAvif = canvas.toDataURL('image/avif', quality);
+          if (testAvif && testAvif.indexOf('data:image/avif') === 0) {
+            resolve(testAvif);
             return;
           }
-        } catch (e) {
-          // ignore
-        }
+        } catch (e) { /* ignore */ }
+        try {
+          const testWebp = canvas.toDataURL('image/webp', quality);
+          if (testWebp && testWebp.indexOf('data:image/webp') === 0) {
+            resolve(testWebp);
+            return;
+          }
+        } catch (e) { /* ignore */ }
         try {
           const dataUrl = canvas.toDataURL('image/jpeg', quality);
           resolve(dataUrl);
