--- a/offline.html
+++ b/offline.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Nexo — Offline</title>
+  <title>Dripzy — Offline</title>
   <style>
     body { margin:0; background:#000; color:#00ff99; font-family: 'Courier New', monospace; display:flex; align-items:center; justify-content:center; height:100vh; text-align:center; }
     .box { max-width:90%; }
